Fix warning about unsupported java parameters Leave the garbage collection specifics to the JVM This affects newly launched servers and proxies